--- a/index.css
+++ b/index.css
@@ -57,6 +57,13 @@ input[type="file"] {
     cursor: pointer; 
 }
 
+.error-message {
+    color: red;
+    font-size: 14px;
+    text-align: center;
+    margin-bottom: 20px;
+    display: none;
+}
 
 .slider {
     -webkit-appearance: none;  /* Override default CSS styles */
